OLAPSQL/javaCC/Analyzer.java
/* Generated By:JavaCC: Do not edit this line. Analyzer.java */
package javaCC;
import structure.*;
import structure.types.*;
import structure.types.predicat.*;
import java.util.ArrayList;
        public class Analyzer implements AnalyzerConstants {
                public Commande c;

/*----------------------------------
-	MAIN
-----------------------------------*/
  static final public ArrayList execute() throws ParseException {
         Commande c=null; ArrayList l = new ArrayList();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CREATE:
      case DROP:
      case ALTER:
      case INSERT:
      case DELETE:
      case SELECT:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CREATE:
        c = create();
                                         l.add(c);
        break;
      case DROP:
        c = drop();
                                         l.add(c);
        break;
      case ALTER:
        c = alter();
                                         l.add(c);
        break;
      case INSERT:
        c = insert();
                                         l.add(c);
        break;
      case DELETE:
        c = delete();
                                         l.add(c);
        break;
      case SELECT:
        c = select();
                                         l.add(c);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
          {if (true) return l;}
    throw new Error("Missing return statement in function");
  }

  static final public Predicat executePredicat() throws ParseException {
         {if (true) return def_pred();}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayList executeAggr() throws ParseException {
         {if (true) return def_aggr();}
    throw new Error("Missing return statement in function");
  }

/*----------------------------------
-	COMMANDES
-----------------------------------*/
        /*-------------
	-	CREATE -OK
	---------------*/
  static final public Create create() throws ParseException {
         Create c;
    jj_consume_token(CREATE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACT:
      c = create_fact();
      break;
    case DIMENSION:
      c = create_dim();
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return c;}
    throw new Error("Missing return statement in function");
  }

  static final public CreateFact create_fact() throws ParseException {
         ArrayList l, ll = new ArrayList(); Token t;
    jj_consume_token(FACT);
    t = jj_consume_token(NOM);
    jj_consume_token(OUVRANTE);
    l = def_attr();
                 CreateFact cf = new CreateFact(t.toString(), Commande.FACT,l);
    jj_consume_token(FERMANTE);
    jj_consume_token(CONNECT);
    jj_consume_token(TO);
    t = jj_consume_token(NOM);
                              ll.add(t.toString());
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(VIRG);
      t = jj_consume_token(NOM);
                                               ll.add(t.toString());
    }
    jj_consume_token(PTVIRG);
         cf.addConnections(ll);{if (true) return cf;}
    throw new Error("Missing return statement in function");
  }

  static final public CreateDimension create_dim() throws ParseException {
         ArrayList l, lhs; Token t;Hierarchy h;
    jj_consume_token(DIMENSION);
    t = jj_consume_token(NOM);
    jj_consume_token(OUVRANTE);
    l = def_attr();
                 CreateDimension cd = new CreateDimension(t.toString(), Commande.DIMENSION,l);
    jj_consume_token(FERMANTE);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case WITH:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      jj_consume_token(WITH);
      jj_consume_token(HIERARCHY);
      t = jj_consume_token(NOM);
      jj_consume_token(OUVRANTE);
      l = def_lev();
                                      h= new Hierarchy (t.toString(), l);
      jj_consume_token(FERMANTE);
                 cd.ajoutHierarchy(h);
    }
    jj_consume_token(PTVIRG);
         {if (true) return cd;}
    throw new Error("Missing return statement in function");
  }

        /*-------------
	-	DROP	-ok
	---------------*/
  static final public Drop drop() throws ParseException {
         Drop d =null;
    jj_consume_token(DROP);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACT:
      d = drop_fact();
      break;
    case DIMENSION:
      d = drop_dim();
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  static final public Drop drop_fact() throws ParseException {
         Token t;
    jj_consume_token(FACT);
    t = jj_consume_token(NOM);
    jj_consume_token(PTVIRG);
         {if (true) return new Drop(t.toString(), Commande.FACT);}
    throw new Error("Missing return statement in function");
  }

  static final public Drop drop_dim() throws ParseException {
         Token t;
    jj_consume_token(DIMENSION);
    t = jj_consume_token(NOM);
    jj_consume_token(PTVIRG);
         {if (true) return new Drop(t.toString(), Commande.DIMENSION);}
    throw new Error("Missing return statement in function");
  }

        /*-------------
	-	ALTER	-OK a ameliorer sur alter_fact
	---------------*/
  static final public Alter alter() throws ParseException {
         Alter ca = null;
    jj_consume_token(ALTER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACT:
      ca = alter_fact();
      break;
    case DIMENSION:
      ca = alter_dim();
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return ca;}
    throw new Error("Missing return statement in function");
  }

  static final public Alter alter_fact() throws ParseException {
         Token t; ArrayList l;
    jj_consume_token(FACT);
    t = jj_consume_token(NOM);
                        Alter ca = new Alter (t.toString(), Commande.FACT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DROP:
    case ADD:
    case CONNECT:
    case DISCONNECT:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
        l = def_attr();
                                   ca.setAlteration(Alter.ADD);
                                                        ca.setAttributs(l);
        break;
      case DROP:
        jj_consume_token(DROP);
        t = jj_consume_token(NOM);
                                ca.setAlteration(Alter.DROP);
                                                ca.ajoutString(t.toString());
        label_4:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRG:
            ;
            break;
          default:
            jj_la1[7] = jj_gen;
            break label_4;
          }
          jj_consume_token(VIRG);
          t = jj_consume_token(NOM);
                                               ca.ajoutString(t.toString());
        }
        break;
      case CONNECT:
        jj_consume_token(CONNECT);
        jj_consume_token(TO);
        t = jj_consume_token(NOM);
                                       ca.setAlteration(Alter.CONNECT);
                                                                ca.ajoutString(t.toString());
        label_5:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRG:
            ;
            break;
          default:
            jj_la1[8] = jj_gen;
            break label_5;
          }
          jj_consume_token(VIRG);
          t = jj_consume_token(NOM);
                                               ca.ajoutString(t.toString());
        }
        break;
      case DISCONNECT:
        jj_consume_token(DISCONNECT);
        jj_consume_token(TO);
        t = jj_consume_token(NOM);
                                          ca.setAlteration(Alter.DISCONNECT);
                                                                        ca.ajoutString(t.toString());
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case VIRG:
            ;
            break;
          default:
            jj_la1[9] = jj_gen;
            break label_6;
          }
          jj_consume_token(VIRG);
          t = jj_consume_token(NOM);
                                               ca.ajoutString(t.toString());
        }
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    jj_consume_token(PTVIRG);
         {if (true) return ca;}
    throw new Error("Missing return statement in function");
  }

  static final public Alter alter_dim() throws ParseException {
         Token t; ArrayList l; Alter ca=null;
    jj_consume_token(DIMENSION);
    t = jj_consume_token(NOM);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DROP:
    case ADD:
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ADD:
        jj_consume_token(ADD);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOM:
          l = def_attr();
                                       ca = new Alter(t.toString(), Commande.DIMENSION,Alter.ADD, l);
          break;
        case HIERARCHY:
                                  ca = new AlterHierarchy (t.toString(), Commande.DIMENSION,AlterHierarchy.ADD_HIERARCHY);
          jj_consume_token(HIERARCHY);
          t = jj_consume_token(NOM);
          jj_consume_token(OUVRANTE);
          l = def_lev();
                                                              Hierarchy h= new Hierarchy (t.toString(), l);
          jj_consume_token(FERMANTE);
                                 ((AlterHierarchy)ca).ajoutHierarchy(h);
          break;
        default:
          jj_la1[12] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      case DROP:
        jj_consume_token(DROP);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NOM:
                         ca = new Alter(t.toString(), Commande.DIMENSION,Alter.DROP);
          t = jj_consume_token(NOM);
                                         ca.ajoutString(t.toString());
          label_7:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case VIRG:
              ;
              break;
            default:
              jj_la1[13] = jj_gen;
              break label_7;
            }
            jj_consume_token(VIRG);
            t = jj_consume_token(NOM);
                                                       ca.ajoutString(t.toString());
          }
          break;
        case HIERARCHY:
                                  ca = new AlterHierarchy (t.toString(), Commande.DIMENSION,AlterHierarchy.DROP_HIERARCHY);
          jj_consume_token(HIERARCHY);
          t = jj_consume_token(NOM);
                                         ((AlterHierarchy)ca).ajoutHierarchy(new Hierarchy(t.toString(),null));
          break;
        default:
          jj_la1[14] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    default:
      jj_la1[16] = jj_gen;
      ;
    }
    jj_consume_token(PTVIRG);
         {if (true) return ca;}
    throw new Error("Missing return statement in function");
  }

        /*-------------
	-	INSERT	-OK
	---------------*/
  static final public Insert insert() throws ParseException {
         Insert ci;
    jj_consume_token(INSERT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACT:
      ci = insert_fact();
      break;
    case DIMENSION:
      ci = insert_dim();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return ci;}
    throw new Error("Missing return statement in function");
  }

  static final public InsertFact insert_fact() throws ParseException {
         Token t;String s;InsertFact cif=null;Predicat p;
    jj_consume_token(FACT);
    t = jj_consume_token(NOM);
    jj_consume_token(VALUES);
    jj_consume_token(OUVRANTE);
    s = def_une_valeur();
                                            cif = new InsertFact(t.toString(), Commande.FACT, s);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        ;
        break;
      default:
        jj_la1[18] = jj_gen;
        break label_8;
      }
      jj_consume_token(VIRG);
      s = def_une_valeur();
                                                   cif.ajoutValeur(s);
    }
    jj_consume_token(FERMANTE);
    jj_consume_token(CONNECT);
    jj_consume_token(TO);
    t = jj_consume_token(NOM);
    jj_consume_token(WHERE);
    p = def_pred();
                                               cif.ajoutConnect(t.toString(),p);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_9;
      }
      jj_consume_token(VIRG);
      t = jj_consume_token(NOM);
      jj_consume_token(WHERE);
      p = def_pred();
                                                     cif.ajoutConnect(t.toString(),p);
    }
    jj_consume_token(PTVIRG);
         {if (true) return cif;}
    throw new Error("Missing return statement in function");
  }

//ok
  static final public Insert insert_dim() throws ParseException {
         Token t;String s;
    jj_consume_token(DIMENSION);
    t = jj_consume_token(NOM);
                            Insert ci = new Insert (t.toString(), Commande.DIMENSION);
    jj_consume_token(VALUES);
    jj_consume_token(OUVRANTE);
    s = def_une_valeur();
                                            ci.ajoutValeur(s);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VIRG:
        ;
        break;
      default:
        jj_la1[20] = jj_gen;
        break label_10;
      }
      jj_consume_token(VIRG);
      s = def_une_valeur();
                                                          ci.ajoutValeur(s);
    }
    jj_consume_token(FERMANTE);
    jj_consume_token(PTVIRG);
         {if (true) return ci;}
    throw new Error("Missing return statement in function");
  }

        /*-------------
	-	DELETE -OK
	---------------*/
  static final public Delete delete() throws ParseException {
         Delete d;
    jj_consume_token(DELETE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACT:
      d = del_fact();
      break;
    case DIMENSION:
      d = del_dim();
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
         {if (true) return d;}
    throw new Error("Missing return statement in function");
  }

  static final public Delete del_fact() throws ParseException {
         Token t; Predicat p=null;
    jj_consume_token(FACT);
    t = jj_consume_token(NOM);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      jj_consume_token(WHERE);
      p = def_pred();
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(PTVIRG);
         {if (true) return new Delete(t.toString(), Commande.FACT,p);}
    throw new Error("Missing return statement in function");
  }

  static final public Delete del_dim() throws ParseException {
         Token t; Predicat p=null;
    jj_consume_token(DIMENSION);
    t = jj_consume_token(NOM);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case WHERE:
      jj_consume_token(WHERE);
      p = def_pred();
      break;
    default:
      jj_la1[23] = jj_gen;
      ;
    }
    jj_consume_token(PTVIRG);
         {if (true) return new Delete(t.toString(), Commande.DIMENSION,p);}
    throw new Error("Missing return statement in function");
  }
